# CFV-1

./: .chefflow-windows.json  .env.example  .env.local.example  .eslintrc.json  .gateway_index.html  .gitignore  .npx-agent-gemma-fixed.out  .npx-agent-gemma.out  .npx-agent.out  .npx-health.out  .prettierignore  .regression-fragile-report.md  .regression-semantic-report.md  .talk-openclaw.out  AGENTS.md  AI-POLICY.md  API_REFERENCE.md  ARCHITECTURE.md  AUTHENTICATION.md  CHANGELOG.md  CHEFFLOW_V1_SCOPE_LOCK.md  CHEF_MUTATIONS_IMPACTING_CLIENT.md  CLAUDE.md  CLIENT_INVITATIONS.md  CLIENT_PORTAL_CONTRACT_MAP.md  CLIENT_PORTAL_REGRESSION_REPORT.md  COMPONENTS.md  COMPREHENSIVE_EVALUATION.md  CONTEXT.md  CONTRIBUTING.md  COPILOT.md  DATABASE.md  DEPLOYMENT.md  DEVELOPMENT.md  ENV_VARIABLES.md  EVENTS.md  GENERALIZATION_TEST_FRAMEWORK.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS-BUILD.md  IMPROVEMENTS-COMPLETE.md  (+194 more)
.claude/: mcp.json  settings.json  settings.local.json
.cloudflared/: config.yml
.constraints/: event-fsm.json  financial-integrity.json  migration-safety.json  privacy-boundary.json  server-actions.json  tier-gating.json
.husky/: pre-commit  pre-push
.openclaw-deploy/: analyze-anomalies.mjs  analyze-capture.mjs  auto-capture-hidden.vbs  auto-capture-session.sh  auto-launch-orchestrator.sh  bridge-catalog-to-prices.mjs  capture-department-hashes.mjs  catalog-db.mjs  (+48 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/static/: index.html
(+15780 files in other folders)
